
TRIBITS_SUBPACKAGE(QtPropertyBrowser)
IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
   IF(BUILD_SHARED_LIBS)
      ADD_DEFINITIONS("-DQT_QTPROPERTYBROWSER_IMPORT")
   ELSE()
      ADD_DEFINITIONS("-DQT_QTPROPERTYBROWSER_EXPORT")
   ENDIF()
ENDIF()
IF(TPL_ENABLE_QT AND TPL_ENABLE_Qt5Gui)
    MESSAGE(FATAL_ERROR "Both Qt4 and Qt5 are enabled in your configuration. Only one is allowed.")
ENDIF()
IF(NOT TPL_ENABLE_QT AND NOT TPL_ENABLE_Qt5Gui)
   MESSAGE(FATAL_ERROR "QT or Qt5Gui is required for this package.")
ENDIF()
#
# Add src directory
#
ADD_SUBDIRECTORY(src)
#
# Add examples
#
TRIBITS_ADD_EXAMPLE_DIRECTORIES(examples)

TRIBITS_SUBPACKAGE_POSTPROCESS()

