
TRIBITS_SUBPACKAGE(QtPropertyBrowser)
IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
   IF(BUILD_SHARED_LIBS)
      ADD_DEFINITIONS("-DQT_QTPROPERTYBROWSER_IMPORT")
   ELSE()
      ADD_DEFINITIONS("-DQT_QTPROPERTYBROWSER_EXPORT")
   ENDIF()
ENDIF()
#
# Add src directory
#
ADD_SUBDIRECTORY(src)
#
# Add examples
#
TRIBITS_ADD_EXAMPLE_DIRECTORIES(examples)

TRIBITS_SUBPACKAGE_POSTPROCESS()

